# root

core/meta/src/: TCling.cxx
tmva/tmva/: CMakeLists.txt
tmva/tmva/inc/TMVA/DNN/: DataLoader.h  DeviceDataLoader.h  Functions.h  Layer.h  Minimizers.h  Timings.h
tmva/tmva/inc/TMVA/DNN/Architectures/: Cuda.h  OpenCL.h
tmva/tmva/inc/TMVA/DNN/Architectures/Cuda/: Buffers.h  CudaMatrix.h  DataLoader.h
tmva/tmva/inc/TMVA/DNN/Architectures/OpenCL/: Buffers.h  OpenCLBuffers.h  OpenCLDevice.h  OpenCLMatrix.h  Types.h  clBlas.h
tmva/tmva/src/: MethodDNN.cxx
tmva/tmva/src/DNN/Architectures/: Cuda.cu  OpenCL.cxx
tmva/tmva/src/DNN/Architectures/Cuda/: ActivationFunctions.cu  Buffers.cxx  CudaBuffers.cxx  CudaMatrix.cu  Dropout.cu  Kernels.cu  Kernels.cuh  LossFunctions.cu  OutputFunctions.cu  Propagation.cu  Regularization.cu
tmva/tmva/src/DNN/Architectures/OpenCL/: ActivationFunctions.cxx  Arithmetic.cxx  Buffers.cxx  Dropout.cxx  Initialization.cxx  Kernels.cl  LossFunctions.cxx  OpenCLBuffers.cxx  OpenCLDevice.cxx  OpenCLMatrix.cxx  Propagation.cxx  Regularization.cxx
tmva/tmva/src/DNN/Architectures/Reference/: LossFunctions.cxx
tmva/tmva/test/: CMakeLists.txt
tmva/tmva/test/DNN/: Benchmark.cxx  CMakeLists.txt  ListDevicesOpenCL.cxx  TestActivationFunctionsOpenCL.cxx  TestBackpropagation.h  TestBackpropagationOpenCL.cxx  TestBenchmark.cxx  TestDataLoader.cxx  TestDataLoader.h  TestDataLoaderOpenCL.cxx  TestDerivatives.h  TestDerivativesOpenCL.cxx  TestLossFunctions.h  TestLossFunctionsCpu.cxx  TestLossFunctionsCuda.cxx  TestLossFunctionsOpenCL.cxx  TestMatrixArithmetic.h  TestMatrixArithmeticCuda.cxx  TestMatrixArithmeticOpenCL.cxx  TestMinimization.cxx  TestMinimization.h  TestMinimizationOpenCL.cxx  TestOpenCL.cxx  Utility.h
tutorials/tmva/: TMVAClassification.C
